Initializes basic compiler structure
Sets up the basic structure for the Rust compiler, "rus".

This includes:
- Adding a basic Cargo.toml file with project metadata.
- Defining initial data structures for tokens and locations.
- Creating a basic lexer that currently only recognizes the '+' token.
- Setting up a main function that reads from stdin and attempts to lex the input.
- Adding a .gitignore to exclude target and repo directories.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,35 @@
 name = "rus"
 version = "0.1.0"
 edition = "2024"
+authors = ["HaiMan <alexredskaber@gmail.com>"]
+description = "A Rust compiler written in Rust"
+repository = "https://github.com/haiman/rus"
+readme = "README.md"
+license = "Apache License 2.0"
+keywords = ["Rust", "compiler", "LLVM"]
+default-run = "rus"
+documentation = "https://docs.rs/rus"
+
 
 [dependencies]
+
+
+# [dev-dependencies]
+
+
+# [features]
+
+
+# [workspace]
+
+
+# [profile.release]
+
+
+# [profile.test]
+
+
+# [profile.bench]
+
+
+# [package.metadata.docs.rs]
