Improves project setup and documentation
Updates the project's Cargo.toml file to include metadata such as keywords, categories, and explicit bin/lib declarations, enhancing discoverability and clarity.

Adds a basic README file to provide an overview of the project, its features, and build instructions, improving the user experience.

Refines .gitignore to exclude more files, such as compiled files, dependency lockfiles, IDE files, and macOS system files, leading to a cleaner repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 /target
 /repo
+# Compiled files
+/target
+/**/*.rs.bk
+
+# Dependency lockfiles
+Cargo.lock
+
+# Repository directory
+/repo
+
+# IDE files
+.vscode/
+*.swp
+*.swo
+
+# macOS
+.DS_Store
