Adds keyword and identifier recognition
Implements lexical analysis for identifiers and keywords.

This introduces a new `Keyword` enum and uses a `phf::Map` to efficiently recognize Rust keywords. This enables the lexer to differentiate between identifiers and keywords during tokenization.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/rus"
 categories = ["compilers"]
 
 [dependencies]
+phf = { version = "0.12.1", features = ["macros"] }
 
 [lib]
 name = "rus"
